# M-FT-Pay-Calculator

./: .gitignore  BUILD_OPTIMIZATION.md  CHANGELOG.md  CI_CD_SETUP.md  IMPLEMENTATION_COMPLETE.md  MOBILE_SETUP.md  README.md  README_TEMPLATE.md  RELEASE_WORKFLOW_FIXES.md  TAURI_SETUP.md  TEMPLATE_ARCHITECTURE.md  TEMPLATE_REPOSITORIES.md  TEMPLATE_REPO_CREATED.md  TEMPLATE_SUMMARY.md  TEMPLATE_USAGE.md  TROUBLESHOOTING.md  package-lock.json  package.json  signing-test.txt  svelte.config.js  vite.config.ts
.github/workflows/: android-build.yml  desktop-build.yml  ios-build.yml  release.yml
cli/: bootstrap.js  plugin-add.js  plugin-list.js
plugins/adp/: install.js  manifest.json
plugins/fsm/: manifest.json
plugins/pluresdb/: manifest.json
plugins/state-docs/: manifest.json
plugins/unum/: manifest.json
scripts/: generate-update-manifest.js  manage-secrets.ps1  setup-secrets.ps1  setup-secrets.sh  setup-template-repo.js  sign-update-files.sh
scripts/signing/: .gitkeep  README.md  android-keystore.sh  ios-sign.sh  linux-sign.sh  macos-sign.sh  self-sign.ps1  windows-sign.ps1
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/lib/services/: updater.ts
src/lib/stores/: calculator.ts  settings.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  App.svelte
src/routes/settings/: +layout.svelte  +page.svelte
template/: .gitignore  README.md  package.json
template/config/: manifest.json  placeholders.json
template/src/: app.css
template/src-tauri/: Cargo.toml  tauri.conf.json
~/.tauri/: myapp.key.pub
(+1 files in other folders)
